# justice-engine

./: .gitignore  Cargo.toml  README.md  Trunk.toml  example2.yaml  index.html
.github/workflows/: rust_plotter.yml
docs/: index.html  ipfs-playground-4a192b5046537c66.js  ipfs-playground-4a192b5046537c66_bg.wasm  ipfs-playground-5216d0afdc310e9e.js  ipfs-playground-5216d0afdc310e9e_bg.wasm  ipfs-playground-6ae44f4d3d3ea4ce.js  ipfs-playground-6ae44f4d3d3ea4ce_bg.wasm  ipfs-playground-79575af3b9fa07b0.js  ipfs-playground-79575af3b9fa07b0_bg.wasm  ipfs-playground-c5aaf7a4faae0a57.js  ipfs-playground-c5aaf7a4faae0a57_bg.wasm  ipfs-playground-cc5420fd4c92b149.js  ipfs-playground-cc5420fd4c92b149_bg.wasm  justice_hash_rough-84732682f28325e.js  justice_hash_rough-84732682f28325e_bg.wasm  justice_hash_rough-d6d5bdca62028653.js  justice_hash_rough-d6d5bdca62028653_bg.wasm  justice_hash_rough-ff7c9c5e1da113db.js  justice_hash_rough-ff7c9c5e1da113db_bg.wasm
src/: example.yaml  justice-example.yaml  main.rs  storage.rs  web.rs  yaml.rs
yaml/: example1.yaml
