[package]
name = "ipfs-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
reqwasm = "0.5.0"
log = "0.4.17"
console_log = "1.0.0"
yew = { version = "0.20", features = ["csr"] }