[package]
name = "justice_hash_rough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
blake2 = "0.10.6"

yew = { version = "0.20.0", features = ["csr"] }
yew-stdweb = "0.18.0"
wasm-bindgen = "0.2.84"
gloo = "0.8.0"
web-sys = { version ="0.3.61", features = ["HtmlInputElement"] }
hex-literal = "0.3.4"
hex = "0.4.3"
base64 = "0.21.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.34"
futures = "0.3.28"
